force-app/main/default/objects/WorkflowTask__c/WorkflowTask__c.object-meta.xml
<CustomObject>
    <label>Workflow Task</label>
    <nameField>
        <displayFormat>WTN-{0000}</displayFormat>
        <label>Workflow Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>