force-app/main/default/objects/WorkflowTask__c/fields/CertType__c.field-meta.xml
<CustomField>
    <fullName>CertType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cert Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>