force-app/main/default/objects/WorkflowTask__c/fields/Number_Of_Certs__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Certs__c</fullName>
    <formula>WorkflowBatch__r.TotalNumberCerts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Certs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>