force-app/main/default/objects/WorkflowTask__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registrant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>