force-app/main/default/objects/WorkflowTask__c/fields/RESAPRSAIdentifier__c.field-meta.xml
<CustomField>
    <fullName>RESAPRSAIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RESA/PRSA Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>