force-app/main/default/objects/WorkflowTask__c/fields/Vintage__c.field-meta.xml
<CustomField>
    <fullName>Vintage__c</fullName>
    <formula>WorkflowBatch__r.Vintage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vintage</label>
    <type>Text</type>
</CustomField>