force-app/main/default/objects/WorkflowTask__c/fields/WorkflowBatch__c.field-meta.xml
<CustomField>
    <fullName>WorkflowBatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow Batch</label>
    <referenceTo>WorkflowBatch__c</referenceTo>
    <relationshipLabel>Workflow Tasks</relationshipLabel>
    <relationshipName>Workflow_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>