force-app/main/default/objects/WorkflowTask__c/fields/WorkflowID__c.field-meta.xml
<CustomField>
    <fullName>WorkflowID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workflow ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>