force-app/main/default/objects/WorkflowTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WorkflowID__c</columns>
    <columns>Registrant__c</columns>
    <columns>RESAPRSAIdentifier__c</columns>
    <columns>CertType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Message__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>